--- a/AnyGo/Distribute/AGPlaViewController.xib
+++ b/AnyGo/Distribute/AGPlaViewController.xib
@@ -27,11 +27,11 @@
                     <rect key="frame" x="0.0" y="6" width="320" height="262"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="write" translatesAutoresizingMaskIntoConstraints="NO" id="sDB-Bk-QCA">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="write" translatesAutoresizingMaskIntoConstraints="NO" id="sDB-Bk-QCA">
                             <rect key="frame" x="22" y="18" width="16" height="18"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="总计" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u9P-Qh-SyH">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="总计" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u9P-Qh-SyH">
                             <rect key="frame" x="52" y="19" width="31" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <constraints>
@@ -42,7 +42,7 @@
                             <color key="textColor" red="0.2470588235" green="0.25882352939999997" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Koi-z2-awx">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="1" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Koi-z2-awx">
                             <rect key="frame" x="82" y="19" width="34" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <constraints>
@@ -53,7 +53,7 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="天" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s1P-bU-gGU">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="天" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s1P-bU-gGU">
                             <rect key="frame" x="124" y="19" width="20" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <constraints>
@@ -117,7 +117,7 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="location" translatesAutoresizingMaskIntoConstraints="NO" id="uUH-Bs-wPd">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location" translatesAutoresizingMaskIntoConstraints="NO" id="uUH-Bs-wPd">
                             <rect key="frame" x="23" y="107" width="14" height="18"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <constraints>
@@ -159,7 +159,7 @@
                             </constraints>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="miaoshu" translatesAutoresizingMaskIntoConstraints="NO" id="0d0-eh-znb">
-                            <rect key="frame" x="48" y="203" width="151" height="39"/>
+                            <rect key="frame" x="48" y="204" width="151" height="39"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="39" id="Chu-CS-4rR"/>
@@ -182,29 +182,29 @@
                                 <action selector="getAddressButtonClicked:" destination="-1" eventType="touchUpInside" id="0aL-v0-lmp"/>
                             </connections>
                         </button>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h6B-K0-LUR" customClass="UIPlaceHolderTextView">
-                            <rect key="frame" x="49" y="126" width="151" height="39"/>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h6B-K0-LUR" customClass="UIPlaceHolderTextView">
+                            <rect key="frame" x="49" y="132" width="151" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="39" id="NgQ-hd-pOh"/>
-                                <constraint firstAttribute="width" constant="151" id="OoA-IV-RzY"/>
+                                <constraint firstAttribute="height" constant="30" id="eyN-FN-32G"/>
+                                <constraint firstAttribute="width" constant="151" id="tE3-Oh-ebz"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tSb-Cj-p19" customClass="UIPlaceHolderTextView">
-                            <rect key="frame" x="48" y="203" width="151" height="39"/>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tSb-Cj-p19" customClass="UIPlaceHolderTextView">
+                            <rect key="frame" x="48" y="212" width="151" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="151" id="a3D-a7-Kzc"/>
-                                <constraint firstAttribute="height" constant="39" id="opW-o7-61m"/>
+                                <constraint firstAttribute="height" constant="33" id="3HC-fp-y9J"/>
+                                <constraint firstAttribute="width" constant="151" id="9R5-RR-SkX"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="location" translatesAutoresizingMaskIntoConstraints="NO" id="2rf-ua-QZz">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location" translatesAutoresizingMaskIntoConstraints="NO" id="2rf-ua-QZz">
                             <rect key="frame" x="23" y="183" width="14" height="18"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <constraints>
@@ -225,18 +225,17 @@
                             <rect key="frame" x="118" y="107" width="79" height="22"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="22" id="MZ5-aD-gzn"/>
+                                <constraint firstAttribute="height" constant="22" id="qhu-g5-JMU"/>
                                 <constraint firstAttribute="width" constant="79" id="teS-Q2-XAE"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vou-jF-jRE">
-                            <rect key="frame" x="53" y="183" width="59" height="20"/>
+                            <rect key="frame" x="53" y="183" width="59" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="59" id="j1D-eQ-sCS"/>
-                                <constraint firstAttribute="height" constant="20" id="ucO-jm-kut"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <state key="normal" title="目的地点">
@@ -252,7 +251,6 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="91" id="47h-7S-eoz"/>
-                                <constraint firstAttribute="height" constant="21" id="yfd-jd-mQH"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -261,25 +259,27 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="tSb-Cj-p19" firstAttribute="top" secondItem="vou-jF-jRE" secondAttribute="bottom" id="1W0-Rr-Qxd"/>
+                        <constraint firstItem="tSb-Cj-p19" firstAttribute="leading" secondItem="NIL-hH-5XZ" secondAttribute="trailing" constant="17" id="0zV-iS-VPY"/>
                         <constraint firstItem="TMR-Jq-eMe" firstAttribute="leading" secondItem="h6B-K0-LUR" secondAttribute="trailing" constant="4" id="2a4-6d-y36"/>
                         <constraint firstItem="vou-jF-jRE" firstAttribute="leading" secondItem="2rf-ua-QZz" secondAttribute="trailing" constant="16" id="3yu-vS-veZ"/>
                         <constraint firstItem="gDt-oX-uZN" firstAttribute="top" secondItem="FC8-lQ-XNd" secondAttribute="bottom" constant="9" id="4Ri-wA-o9U"/>
-                        <constraint firstItem="K7c-yP-OwU" firstAttribute="top" secondItem="gDt-oX-uZN" secondAttribute="bottom" constant="6" id="4Zh-fc-Ft4"/>
                         <constraint firstItem="oyQ-Q7-Afx" firstAttribute="top" secondItem="gDt-oX-uZN" secondAttribute="bottom" constant="6" id="5EV-Y5-kbk"/>
                         <constraint firstItem="M4A-Lj-4Tw" firstAttribute="leading" secondItem="gDt-oX-uZN" secondAttribute="trailing" constant="72" id="8KQ-c5-oG1"/>
+                        <constraint firstItem="rcX-nF-VMD" firstAttribute="top" secondItem="vou-jF-jRE" secondAttribute="top" id="8mG-ER-77h"/>
                         <constraint firstItem="tSb-Cj-p19" firstAttribute="leading" secondItem="NIL-hH-5XZ" secondAttribute="trailing" constant="17" id="9Ne-Gc-mtU"/>
                         <constraint firstItem="sDB-Bk-QCA" firstAttribute="top" secondItem="BlS-dS-nOF" secondAttribute="top" constant="18" id="A0E-pd-t8z"/>
                         <constraint firstItem="s1P-bU-gGU" firstAttribute="top" secondItem="BlS-dS-nOF" secondAttribute="top" constant="19" id="ABb-BP-DVt"/>
                         <constraint firstItem="jts-dv-UK3" firstAttribute="leading" secondItem="BlS-dS-nOF" secondAttribute="leading" constant="29" id="AOJ-GY-68T"/>
-                        <constraint firstItem="h6B-K0-LUR" firstAttribute="top" secondItem="gDt-oX-uZN" secondAttribute="bottom" constant="25" id="BAE-to-Taw"/>
-                        <constraint firstItem="vou-jF-jRE" firstAttribute="top" secondItem="h6B-K0-LUR" secondAttribute="bottom" constant="18" id="FPG-vM-7V0"/>
+                        <constraint firstItem="K7c-yP-OwU" firstAttribute="top" secondItem="oyQ-Q7-Afx" secondAttribute="top" id="AgZ-Ek-Cio"/>
+                        <constraint firstItem="rcX-nF-VMD" firstAttribute="top" secondItem="2rf-ua-QZz" secondAttribute="top" id="B7G-ET-Mdu"/>
                         <constraint firstItem="Koi-z2-awx" firstAttribute="top" secondItem="BlS-dS-nOF" secondAttribute="top" constant="19" id="GDR-Uv-dRE"/>
                         <constraint firstItem="8C6-JI-pqU" firstAttribute="leading" secondItem="jts-dv-UK3" secondAttribute="trailing" constant="17" id="Ijb-Tf-1Cp"/>
+                        <constraint firstItem="rcX-nF-VMD" firstAttribute="centerY" secondItem="vou-jF-jRE" secondAttribute="centerY" id="IoP-rl-zgw"/>
                         <constraint firstItem="XPB-uv-c1x" firstAttribute="top" secondItem="BlS-dS-nOF" secondAttribute="top" constant="50" id="K2X-Ie-HSD"/>
                         <constraint firstAttribute="width" constant="320" id="LFe-Xd-YQx"/>
                         <constraint firstItem="u9P-Qh-SyH" firstAttribute="top" secondItem="BlS-dS-nOF" secondAttribute="top" constant="19" id="Nfw-Vt-po7"/>
                         <constraint firstItem="uUH-Bs-wPd" firstAttribute="top" secondItem="sDB-Bk-QCA" secondAttribute="bottom" constant="71" id="OGD-dY-cCA"/>
+                        <constraint firstItem="h6B-K0-LUR" firstAttribute="top" secondItem="K7c-yP-OwU" secondAttribute="bottom" constant="3" id="Orb-e7-N0A"/>
                         <constraint firstItem="2rf-ua-QZz" firstAttribute="top" secondItem="uUH-Bs-wPd" secondAttribute="bottom" constant="58" id="PMh-vY-RiA"/>
                         <constraint firstItem="oyQ-Q7-Afx" firstAttribute="leading" secondItem="uUH-Bs-wPd" secondAttribute="trailing" constant="16" id="QF6-7u-lT5"/>
                         <constraint firstItem="Koi-z2-awx" firstAttribute="leading" secondItem="sDB-Bk-QCA" secondAttribute="trailing" constant="44" id="RF0-ca-hS6"/>
@@ -289,8 +289,9 @@
                         <constraint firstItem="8C6-JI-pqU" firstAttribute="top" secondItem="gDt-oX-uZN" secondAttribute="bottom" constant="25" id="YJh-YB-3hf"/>
                         <constraint firstItem="s1P-bU-gGU" firstAttribute="leading" secondItem="Koi-z2-awx" secondAttribute="trailing" constant="8" id="Z5b-2O-l2M"/>
                         <constraint firstItem="FC8-lQ-XNd" firstAttribute="leading" secondItem="BlS-dS-nOF" secondAttribute="leading" constant="53" id="aQX-Ha-3uR"/>
+                        <constraint firstItem="tSb-Cj-p19" firstAttribute="top" secondItem="rcX-nF-VMD" secondAttribute="bottom" constant="8" symbolic="YES" id="cCH-Mh-slB"/>
                         <constraint firstItem="NIL-hH-5XZ" firstAttribute="leading" secondItem="BlS-dS-nOF" secondAttribute="leading" constant="29" id="dwU-oY-HV6"/>
-                        <constraint firstItem="rcX-nF-VMD" firstAttribute="top" secondItem="h6B-K0-LUR" secondAttribute="bottom" constant="18" id="euB-Gi-Fqn"/>
+                        <constraint firstAttribute="bottom" secondItem="tSb-Cj-p19" secondAttribute="bottom" constant="17" id="eU0-a3-Hlp"/>
                         <constraint firstItem="NIL-hH-5XZ" firstAttribute="top" secondItem="BlS-dS-nOF" secondAttribute="top" constant="209" id="fWT-LY-7gC"/>
                         <constraint firstItem="h6B-K0-LUR" firstAttribute="leading" secondItem="jts-dv-UK3" secondAttribute="trailing" constant="18" id="gOz-dP-n4I"/>
                         <constraint firstItem="0d0-eh-znb" firstAttribute="top" secondItem="vou-jF-jRE" secondAttribute="bottom" id="gUt-GS-16m"/>
