--- a/AnyGo/Distribute/AGAddressViewController.xib
+++ b/AnyGo/Distribute/AGAddressViewController.xib
@@ -64,19 +64,19 @@
                                 <constraint firstAttribute="width" constant="151" id="Tfm-Yw-sbR"/>
                             </constraints>
                         </imageView>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IO6-wz-3MA">
-                            <rect key="frame" x="20" y="88" width="151" height="39"/>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IO6-wz-3MA">
+                            <rect key="frame" x="20" y="93" width="151" height="34"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="151" id="1cn-Fy-fvc"/>
-                                <constraint firstAttribute="height" constant="39" id="hCJ-qJ-t7T"/>
+                                <constraint firstAttribute="height" constant="34" id="wDz-LQ-e2v"/>
+                                <constraint firstAttribute="width" constant="151" id="wrT-LO-siH"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
-                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQ4-7L-KVS">
-                            <rect key="frame" x="30" y="155" width="100" height="37"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQ4-7L-KVS">
+                            <rect key="frame" x="30" y="155" width="30" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <state key="normal" title="取消">
                                 <color key="titleColor" red="0.47058823529999999" green="0.81568627449999997" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
@@ -86,8 +86,8 @@
                                 <action selector="cancelButtonClicked:" destination="-1" eventType="touchUpInside" id="nj3-wy-dzx"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WRw-pW-DfE">
-                            <rect key="frame" x="193" y="155" width="100" height="37"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WRw-pW-DfE">
+                            <rect key="frame" x="123" y="155" width="30" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <state key="normal" title="确定">
                                 <color key="titleColor" red="0.47058823529999999" green="0.81568627449999997" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
@@ -104,7 +104,6 @@
                         <constraint firstItem="aQ4-7L-KVS" firstAttribute="width" secondItem="WRw-pW-DfE" secondAttribute="width" id="6Nb-Fs-TyE"/>
                         <constraint firstItem="fz3-jk-d4G" firstAttribute="top" secondItem="5P9-BI-4Rg" secondAttribute="top" constant="22" id="AON-Xn-RWP"/>
                         <constraint firstItem="aQ4-7L-KVS" firstAttribute="top" secondItem="IO6-wz-3MA" secondAttribute="bottom" constant="28" id="Dyv-ut-O5p"/>
-                        <constraint firstItem="IO6-wz-3MA" firstAttribute="top" secondItem="Gex-bt-08h" secondAttribute="bottom" constant="8" id="Ff8-rS-oNe"/>
                         <constraint firstItem="WRw-pW-DfE" firstAttribute="leading" secondItem="aQ4-7L-KVS" secondAttribute="trailing" constant="63" id="Kkv-1p-wAD"/>
                         <constraint firstItem="Gex-bt-08h" firstAttribute="top" secondItem="fz3-jk-d4G" secondAttribute="bottom" constant="16" id="LX4-7H-bqB"/>
                         <constraint firstItem="aQ4-7L-KVS" firstAttribute="leading" secondItem="5P9-BI-4Rg" secondAttribute="leading" constant="30" id="MEH-2e-xRb"/>
@@ -112,6 +111,7 @@
                         <constraint firstAttribute="width" constant="320" id="Ode-PC-h7d"/>
                         <constraint firstItem="WRw-pW-DfE" firstAttribute="top" secondItem="Ikh-sR-wxU" secondAttribute="bottom" constant="112" id="UMc-aa-6uD"/>
                         <constraint firstItem="aPC-Tg-Ghr" firstAttribute="leading" secondItem="5P9-BI-4Rg" secondAttribute="leading" constant="19" id="Vbu-rv-w3W"/>
+                        <constraint firstItem="aQ4-7L-KVS" firstAttribute="baseline" secondItem="WRw-pW-DfE" secondAttribute="baseline" id="Y0M-xg-5NQ"/>
                         <constraint firstItem="Ikh-sR-wxU" firstAttribute="leading" secondItem="fz3-jk-d4G" secondAttribute="trailing" constant="15" id="ZHK-7W-zcF"/>
                         <constraint firstItem="WRw-pW-DfE" firstAttribute="top" secondItem="Ikh-sR-wxU" secondAttribute="bottom" constant="112" id="bV6-cI-0Vv"/>
                         <constraint firstItem="aPC-Tg-Ghr" firstAttribute="top" secondItem="Gex-bt-08h" secondAttribute="bottom" constant="8" id="dJh-S9-mae"/>
@@ -119,6 +119,7 @@
                         <constraint firstItem="IO6-wz-3MA" firstAttribute="leading" secondItem="5P9-BI-4Rg" secondAttribute="leading" constant="20" id="eE4-Vv-cm1"/>
                         <constraint firstItem="fz3-jk-d4G" firstAttribute="leading" secondItem="5P9-BI-4Rg" secondAttribute="leading" constant="19" id="ni3-b9-PjC"/>
                         <constraint firstItem="Gex-bt-08h" firstAttribute="leading" secondItem="5P9-BI-4Rg" secondAttribute="leading" constant="19" id="wvi-sJ-BON"/>
+                        <constraint firstItem="IO6-wz-3MA" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="5P9-BI-4Rg" secondAttribute="leading" constant="20" id="yqA-of-mBv"/>
                         <constraint firstItem="Ikh-sR-wxU" firstAttribute="top" secondItem="5P9-BI-4Rg" secondAttribute="top" constant="22" id="yxo-qW-Dta"/>
                     </constraints>
                 </view>
