mine friend add and friend list

--- a/AnyGo/Distribute/AGPlaViewController.xib
+++ b/AnyGo/Distribute/AGPlaViewController.xib
@@ -221,7 +221,7 @@
                                 <constraint firstAttribute="height" constant="45" id="y0I-Bd-6QI"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K7c-yP-OwU">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K7c-yP-OwU">
                             <rect key="frame" x="118" y="107" width="79" height="22"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <constraints>
